# detector_ros_docker

./: .gitignore  README.md
gr1/ros1/: Dockerfile  entrypoint.sh
gr1/ros1/src/: CMakeLists.txt
gr1/ros1/src/gr1_driver/: CMakeLists.txt  package.xml
gr1/ros1/src/gr1_driver/config/: bin_energy_dose_lookup.csv
gr1/ros1/src/gr1_driver/launch/: gr1_with_dose.launch
gr1/ros1/src/gr1_driver/scripts/: gr1_dose_node.py  gr1_node.py
gr1/ros2/: Dockerfile  entrypoint.sh
gr1/ros2/src/gr1_driver/: CMakeLists.txt  package.xml
gr1/ros2/src/gr1_driver/gr1_driver/: gr1_detector.py
gr1/ros2/src/gr1_driver/launch/: gr1_with_dose.launch.py
gr1/ros2/src/gr1_driver/scripts/: gr1_dose_node.py  gr1_node.py
hammamatsu/ros1/: CMakeLists.txt  Dockerfile  entrypoint.sh
hammamatsu/ros1/src/hamamatsu_driver/: CMakeLists.txt  package.xml
hammamatsu/ros1/src/hamamatsu_driver/launch/: hamamatsu_with_dose.launch
hammamatsu/ros1/src/hamamatsu_driver/scripts/: hamamatsu_dose_node.py  hamamatsu_node.py
hammamatsu/ros1/src/hamamatsu_driver/src/hamamatsu_driver/: hamamatsu_detector.py
hammamatsu/ros2/: Dockerfile  entrypoint.sh
hammamatsu/ros2/src/hamamatsu_driver/: CMakeLists.txt  package.xml
hammamatsu/ros2/src/hamamatsu_driver/launch/: hamamatsu_with_dose.launch.py
hammamatsu/ros2/src/hamamatsu_driver/scripts/: hamamatsu_dose_node.py  hamamatsu_node.py
sigma50/ros1/: Dockerfile  entrypoint.sh
sigma50/ros1/src/: CMakeLists.txt
sigma50/ros1/src/sigma50_driver/: CMakeLists.txt  package.xml
sigma50/ros1/src/sigma50_driver/launch/: sigma50_with_dose.launch
sigma50/ros1/src/sigma50_driver/scripts/: sigma50_dose_node.py  sigma50_node.py
sigma50/ros2/: Dockerfile  entrypoint.sh
sigma50/ros2/src/sigma50_driver/: CMakeLists.txt  package.xml
sigma50/ros2/src/sigma50_driver/launch/: sigma50_with_dose.launch.py
sigma50/ros2/src/sigma50_driver/scripts/: sigma50_dose_node.py  sigma50_node.py
sigma50/ros2/src/sigma50_driver/sigma50_driver/: sigma_detector.py
viz/ros1/: Dockerfile  entrypoint.sh
viz/ros1/src/: CMakeLists.txt
viz/ros1/src/spectrum_viz/: CMakeLists.txt  package.xml
viz/ros1/src/spectrum_viz/scripts/: spectrum_gui.py  spectrum_plot.py
viz/ros2/: Dockerfile  entrypoint.sh
viz/ros2/src/spectrum_viz/: package.xml  setup.cfg  setup.py
viz/ros2/src/spectrum_viz/spectrum_viz/: spectrum_gui.py  spectrum_plot.py
