<?xml version="1.0"?>
<package format="2">
  <name>hamamatsu_driver</name>
  <version>0.0.1</version>
  <description>Hamamatsu radiation detector ROS1 driver</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
