<?xml version="1.0"?>
<package format="3">
  <name>hamamatsu_driver</name>
  <version>0.1.0</version>
  <description>Hamamatsu radiation detector ROS2 driver</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-hid</exec_depend>
  <exec_depend>python3-usb</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
