<?xml version="1.0"?>
<package format="2">
  <name>spectrum_viz</name>
  <version>0.0.1</version>
  <description>Simple realtime spectrum visualiser</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
