<?xml version="1.0"?>
<package format="3">
  <name>spectrum_viz</name>
  <version>0.0.1</version>
  <description>Simple realtime spectrum visualiser (ROS2)</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- For completeness (runtime deps installed via apt in Dockerfile) -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-tk</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
